@@ -1,6 +1,7 @@
 dconf-editor (3.21.90-2) UNRELEASED; urgency=medium
 
   * Upload to unstable.
+  * Bump debhelper compat level to 10.
 
  -- Michael Biebl <biebl@debian.org>  Tue, 13 Sep 2016 16:54:04 +0200
 
